[gd_scene load_steps=24 format=3 uid="uid://d0qvhnakwj6r3"]

[ext_resource type="PackedScene" uid="uid://cp4r6r8yvg2ic" path="res://background.tscn" id="1_a4573"]
[ext_resource type="Script" path="res://level_3.gd" id="1_x0cg6"]
[ext_resource type="PackedScene" uid="uid://b7bhuq0m72qal" path="res://button.tscn" id="2_3nb4b"]
[ext_resource type="PackedScene" uid="uid://btdulfgm8j74y" path="res://flag.tscn" id="3_w85ua"]
[ext_resource type="PackedScene" uid="uid://bbhr52f1i6gru" path="res://win_screen.tscn" id="4_344i4"]
[ext_resource type="PackedScene" uid="uid://c141sxkflvbst" path="res://player.tscn" id="5_nv37l"]
[ext_resource type="Texture2D" uid="uid://ylpg3u056typ" path="res://Art/Terrain/Grass/Left.png" id="6_h7kvt"]
[ext_resource type="Texture2D" uid="uid://giyywm8rhsh8" path="res://Art/Terrain/Grass/Middle.png" id="7_v8n3u"]
[ext_resource type="Texture2D" uid="uid://dhuulx6yof1nv" path="res://Art/Terrain/Dirt/Center.png" id="8_h53vd"]
[ext_resource type="Texture2D" uid="uid://dko23uyv52red" path="res://Art/Terrain/Grass/Right.png" id="9_a1k4b"]
[ext_resource type="Texture2D" uid="uid://bpkt8ba4cemft" path="res://Art/Terrain/Grass/Top Left.png" id="10_avq36"]
[ext_resource type="Texture2D" uid="uid://dgjt12ap50lr7" path="res://Art/Terrain/Dirt/Bottom Middle.png" id="11_tcw0e"]
[ext_resource type="Texture2D" uid="uid://na5fitaxug8u" path="res://Art/Terrain/Other/Grass Edge.png" id="12_74kmq"]
[ext_resource type="Texture2D" uid="uid://cpmnfavyg72kp" path="res://Art/Terrain/Stone/Long Stone.png" id="13_6uq4a"]
[ext_resource type="Texture2D" uid="uid://bqats7p6iocvq" path="res://Art/Terrain/Stone/Small Stone.png" id="14_n7ocf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6y8jt"]
size = Vector2(960, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1dk3"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w26x0"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24on6"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk6yr"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuufo"]
size = Vector2(432, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7d5d"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3qu1"]
size = Vector2(16, 16)

[node name="Level3" type="Node2D"]
script = ExtResource("1_x0cg6")

[node name="Background" parent="." instance=ExtResource("1_a4573")]
Level = 3

[node name="RespawnPosition" type="Marker2D" parent="."]
position = Vector2(144, 416)

[node name="Button0" parent="." instance=ExtResource("2_3nb4b")]
position = Vector2(672, 464)

[node name="Button1" parent="." instance=ExtResource("2_3nb4b")]
position = Vector2(288, 464)

[node name="Button2" parent="." instance=ExtResource("2_3nb4b")]
position = Vector2(576, 224)

[node name="Flag" parent="." instance=ExtResource("3_w85ua")]
position = Vector2(920, 416)

[node name="WinScreen" parent="." instance=ExtResource("4_344i4")]
visible = false
offset_right = 960.0
offset_bottom = 512.0

[node name="LevelArt" type="Node2D" parent="."]

[node name="Left" type="Sprite2D" parent="LevelArt"]
position = Vector2(24, 488)
texture = ExtResource("6_h7kvt")

[node name="Middle" type="Sprite2D" parent="LevelArt"]
position = Vector2(72, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle2" type="Sprite2D" parent="LevelArt"]
position = Vector2(120, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle3" type="Sprite2D" parent="LevelArt"]
position = Vector2(168, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle4" type="Sprite2D" parent="LevelArt"]
position = Vector2(216, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle5" type="Sprite2D" parent="LevelArt"]
position = Vector2(264, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle6" type="Sprite2D" parent="LevelArt"]
position = Vector2(312, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle7" type="Sprite2D" parent="LevelArt"]
position = Vector2(360, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle8" type="Sprite2D" parent="LevelArt"]
position = Vector2(408, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle9" type="Sprite2D" parent="LevelArt"]
position = Vector2(456, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle10" type="Sprite2D" parent="LevelArt"]
position = Vector2(504, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle11" type="Sprite2D" parent="LevelArt"]
position = Vector2(552, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle12" type="Sprite2D" parent="LevelArt"]
position = Vector2(600, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle13" type="Sprite2D" parent="LevelArt"]
position = Vector2(648, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle14" type="Sprite2D" parent="LevelArt"]
position = Vector2(696, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle15" type="Sprite2D" parent="LevelArt"]
position = Vector2(744, 488)
texture = ExtResource("7_v8n3u")

[node name="Middle16" type="Sprite2D" parent="LevelArt"]
position = Vector2(792, 488)
texture = ExtResource("7_v8n3u")

[node name="Center" type="Sprite2D" parent="LevelArt"]
position = Vector2(888, 440)
texture = ExtResource("8_h53vd")

[node name="Right2" type="Sprite2D" parent="LevelArt"]
position = Vector2(936, 392)
texture = ExtResource("9_a1k4b")

[node name="TopLeft" type="Sprite2D" parent="LevelArt"]
position = Vector2(888, 392)
texture = ExtResource("10_avq36")

[node name="BottomMiddle" type="Sprite2D" parent="LevelArt"]
position = Vector2(888, 488)
texture = ExtResource("11_tcw0e")

[node name="GrassEdge" type="Sprite2D" parent="LevelArt"]
position = Vector2(912, 471.5)
texture = ExtResource("12_74kmq")

[node name="GrassEdge2" type="Sprite2D" parent="LevelArt"]
position = Vector2(864, 471.5)
texture = ExtResource("12_74kmq")

[node name="Middle17" type="Sprite2D" parent="LevelArt"]
position = Vector2(840, 488)
texture = ExtResource("7_v8n3u")

[node name="Right" type="Sprite2D" parent="LevelArt"]
position = Vector2(936, 488)
texture = ExtResource("9_a1k4b")

[node name="LongStone" type="Sprite2D" parent="LevelArt"]
position = Vector2(120, 408)
texture = ExtResource("13_6uq4a")

[node name="LongStone2" type="Sprite2D" parent="LevelArt"]
position = Vector2(24, 344)
texture = ExtResource("13_6uq4a")

[node name="LongStone3" type="Sprite2D" parent="LevelArt"]
position = Vector2(120, 280)
texture = ExtResource("13_6uq4a")

[node name="SmallStone" type="Sprite2D" parent="LevelArt"]
position = Vector2(200, 216)
texture = ExtResource("14_n7ocf")

[node name="LongStone4" type="Sprite2D" parent="LevelArt"]
position = Vector2(216, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone5" type="Sprite2D" parent="LevelArt"]
position = Vector2(264, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone6" type="Sprite2D" parent="LevelArt"]
position = Vector2(312, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone7" type="Sprite2D" parent="LevelArt"]
position = Vector2(360, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone8" type="Sprite2D" parent="LevelArt"]
position = Vector2(408, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone9" type="Sprite2D" parent="LevelArt"]
position = Vector2(456, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone10" type="Sprite2D" parent="LevelArt"]
position = Vector2(504, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone11" type="Sprite2D" parent="LevelArt"]
position = Vector2(552, 232)
texture = ExtResource("13_6uq4a")

[node name="LongStone12" type="Sprite2D" parent="LevelArt"]
position = Vector2(600, 232)
texture = ExtResource("13_6uq4a")

[node name="Middle18" type="Sprite2D" parent="LevelArt"]
visible = false
position = Vector2(888, 488)
texture = ExtResource("7_v8n3u")

[node name="SmallStone2" type="Sprite2D" parent="LevelArt"]
position = Vector2(392, 216)
texture = ExtResource("14_n7ocf")

[node name="LevelCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(480, 488)
shape = SubResource("RectangleShape2D_6y8jt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(912, 416)
shape = SubResource("RectangleShape2D_u1dk3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(120, 408)
shape = SubResource("RectangleShape2D_w26x0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(24, 344)
shape = SubResource("RectangleShape2D_24on6")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(120, 280)
shape = SubResource("RectangleShape2D_vk6yr")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(408, 232)
shape = SubResource("RectangleShape2D_wuufo")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(200, 216)
shape = SubResource("RectangleShape2D_j7d5d")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="LevelCollision"]
position = Vector2(392, 216)
shape = SubResource("RectangleShape2D_f3qu1")

[node name="Player" parent="." instance=ExtResource("5_nv37l")]
player_scene = ExtResource("5_nv37l")
